arrow spacing and margin fixes

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -12,8 +12,12 @@ $dark-gray: #434747;
   position: relative;
 
   .events-anchor {
-    padding: 8% 0;
-    
+    padding: 10% 0;
+
+    @include breakpoint(medium){
+      padding: 8%;
+    }
+
     @include breakpoint(large){
       padding: 2%;
     }
